Rename stream package and move tests to top level

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,13 +1,9 @@
 // This is the configuration file used by BuckleScript's build system bsb. Its documentation lives here: http://bucklescript.github.io/bucklescript/docson/#build-schema.json
 // BuckleScript comes with its own parser for bsconfig.json, which is normal JSON, with the extra support of comments and trailing commas.
 {
-  "name": "@conduitvc/bs-node-stream",
+  "name": "conduitvc",
   "version": "0.1.0",
   "sources": [
-    {
-      "dir": "src",
-      "subdirs": true
-    },
     {
       "dir": "__test__",
       "type": "dev"
@@ -18,12 +14,20 @@
     "in-source": true
   },
   "suffix": ".bs.js",
+  "bsc-flags": ["-bs-no-version-header", "-bs-super-errors"],
   "bs-dependencies": [
-    // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
-    "bs-node"
+    "bs-node",
+    "@conduitvc/bs-node-stream",
+    "@glennsl/bs-jest"
+  ],
+  "bs-dev-dependencies": [
+    "bs-node",
+    "@conduitvc/bs-node-stream",
+    "@glennsl/bs-jest"
   ],
   "warnings": {
     "error": "+101"
   },
+  "namespace": true,
   "refmt": 3
 }
