--- a/packages/bs-node-ext/bsconfig.json
+++ b/packages/bs-node-ext/bsconfig.json
@@ -1,8 +1,8 @@
 // This is the configuration file used by BuckleScript's build system bsb. Its documentation lives here: http://bucklescript.github.io/bucklescript/docson/#build-schema.json
 // BuckleScript comes with its own parser for bsconfig.json, which is normal JSON, with the extra support of comments and trailing commas.
 {
-  "name": "@conduitvc/bs-node-ext",
-  "version": "0.1.0",
+  "name": "bs-node-ext",
+  "version": "0.2.0",
   "sources": [
     {
       "dir": "src",
