--- a/packages/bs-node-ext/package.json
+++ b/packages/bs-node-ext/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@conduitvc/bs-node-ext",
+  "name": "bs-node-ext",
   "version": "0.1.0",
   "scripts": {
     "build": "bsb -make-world",
