--- a/packages/bs-node-ext/package.json
+++ b/packages/bs-node-ext/package.json
@@ -1,12 +1,14 @@
 {
   "name": "bs-node-ext",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "scripts": {
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
     "clean": "bsb -clean-world"
   },
-  "keywords": ["BuckleScript"],
+  "keywords": [
+    "BuckleScript"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
